Fixed a NPTRException, guild update, connection are now handled in a separated thread