@@ -1,6 +1,6 @@
 @echo off
 cd bin
-"C:\Program Files\Java\jdk1.8.0_102\bin\jar.exe" cfm ../worldserver.jar ../meta.txt *
+"C:\Program Files\Java\jdk1.8.0_91\bin\jar.exe" cfm ../worldserver.jar ../meta.txt *
 cd ..
-java -jar -server worldserver.jar
+java -jar -server -XX:+UseConcMarkSweepGC worldserver.jar
 pause
